syntax = "proto3";


package calculator;

option go_package = "/calculator";

service Calculator {
    rpc Add (AddRequest) returns (Response);
    rpc Subtract (SubtractRequest) returns (Response);
    rpc Multiply (MultiplyRequest) returns (Response);
    rpc Divide (DivideRequest) returns (Response);
}

message AddRequest{
    double n1 = 1;
    double n2 = 2;
}

message SubtractRequest{
    double n1 = 1;
    double n2 = 2;
}

message MultiplyRequest{
    double n1 = 1;
    double n2 = 2;
}

message DivideRequest{
    double n1 = 1;
    double n2 = 2;
}

message Response{
    double Response = 1;
}
